--- a/tests/unit/index.html
+++ b/tests/unit/index.html
@@ -3,7 +3,17 @@
 <head>
     <title>task</title>
     <script src="http://yui.yahooapis.com/3.10.0/build/yui/yui-min.js"></script>
-    <script type="application/javascript;version=1.7" src="js/tests.js"></script>
+    <script>
+    (function () {
+        try {
+            eval('(function* (){}())');
+            document.write('<scr' + 'ipt src="js/tests-es6.js"></scr' + 'ipt>')
+        } catch (e) {
+            document.write('<scr' + 'ipt type="application/javascript;version=1.7" src="js/tests-ff.js"></scr' + 'ipt>');
+        }
+    }());
+    </script>
+    
     <meta charset="utf-8" />
 </head>
 <body class="yui3-skin-sam">
