--- a/tests/unit/index.html
+++ b/tests/unit/index.html
@@ -25,7 +25,7 @@ YUI({
     filter: (window.location.search.match(/[?&]filter=([^&]+)/) || [])[1] || 'raw',
     modules: {
         'gallery-task': {
-            fullpath: '../../build/gallery-task/gallery-task.js',
+            fullpath: '/build/gallery-task/gallery-task.js',
             requires: [
                 'promise'
             ]
